small fix on frontend, added config for setting up our upload dir and changed our controller to use said dir